--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,9 +3,9 @@ requires = ["hatchling"]
 build-backend = "hatchling.build"
 
 [project]
-name = "pytorch-example"
+name = "Federated_Learning_Binario"
 version = "1.0.0"
-description = "Federated Learning with PyTorch and Flower (Advanced Example)"
+description = "Guardado de pesos fruto de realizar un proceso de aprendizaje federado con variable objetivo binaria"
 license = "Apache-2.0"
 dependencies = [
     "flwr[simulation]>=1.15.2",
@@ -36,7 +36,8 @@ default = "local-sim"
 [tool.flwr.federations.local-sim]
 options.num-supernodes = 10
 options.backend.client-resources.num-cpus = 2 # each ClientApp assumes to use 2CPUs
-options.backend.client-resources.num-gpus = 0.0 # ratio of VRAM a ClientApp has access to
+options.backend.client-resources.num-gpus = 0.2 # ratio of VRAM a ClientApp has access to
+
 [tool.flwr.federations.local-sim-gpu]
 options.num-supernodes = 10
 options.backend.client-resources.num-cpus = 2
